# whisper-podcast-transcript

./: .gitignore  Readme.md  podcast_transcript_demo.ipynb  pyproject.toml
